src/objects/MUSW__Fee__c.object
<CustomObject>
    <fields>
        <fullName>Voided_Receipt_Amount_DHP_Amount__c</fullName>
        <description>2011</description>
        <label>Voided Receipt Amount +DHP Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voided_Receipt_Amount__c</fullName>
        <description>2011 : capturing the voided amount from the receipt for which this DHP is created</description>
        <label>Voided Receipt Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voided_Receipt_Check_Number__c</fullName>
        <description>2011</description>
        <label>Voided Receipt Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voided_Receipt_Payment_Method__c</fullName>
        <description>2011 : Voided Receipt Payment Method</description>
        <label>Voided Receipt Payment Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <description>1966</description>
        <label>Voucher #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_for__c</fullName>
        <description>1966 - Voucher for field on letter template</description>
        <formula>MUSW__License2__r.Applicant_Full_Name__c +&quot; - &quot; +TEXT(MUSW__License2__r.Application_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>portal_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Amount__c</columns>
        <columns>MUSW__Amount_Paid__c</columns>
        <columns>Application_Type__c</columns>
        <columns>Related_To__c</columns>
        <columns>MUSW__Fee_Paid__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MUSW__License2__c</columns>
        <columns>MUSW__License1__c</columns>
        <columns>MUSW__License__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TMS_Revenue_Code__c</columns>
        <columns>TMS_Cash_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>David</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DSHS_Fees</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Agency_Code__c</field>
            <operation>equals</operation>
            <value>3000</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>DSHS Fees</label>
    </listViews>
    <listViews>
        <fullName>ESD_Fees</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Agency_Code__c</field>
            <operation>equals</operation>
            <value>5400</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>ESD Fees</label>
    </listViews>
    <listViews>
        <fullName>License_Assignment_Queue_Fee</fullName>
        <filterScope>Queue</filterScope>
        <label>License Assignment Queue</label>
        <queue>License_Assignment_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Outstanding_Fees</fullName>
        <columns>Related_To__c</columns>
        <columns>NAME</columns>
        <columns>MUSW__Amount__c</columns>
        <columns>MUSW__Outstanding_Fee__c</columns>
        <columns>MUSW__Fee_Paid__c</columns>
        <columns>Account_Number__c</columns>
        <columns>AR_Date__c</columns>
        <columns>ARed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__Outstanding_Fee__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Outstanding Fees</label>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>Related_To__c</columns>
        <columns>NAME</columns>
        <columns>MUSW__Amount__c</columns>
        <columns>MUSW__Outstanding_Fee__c</columns>
        <columns>MUSW__Fee_Paid_Date__c</columns>
        <columns>AR_Date__c</columns>
        <columns>BGBK__Cart__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Revenue_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MUSW__Outstanding_Fee__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Search</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <recordTypes>
        <fullName>MUSW__All</fullName>
        <active>true</active>
        <label>All</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Create_Fee_by_Delegate__c</fullName>
        <label>Create Fee by Delegate</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Insert_Fee_Share__c</fullName>
        <label>Insert Fee Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>BGBK__Fee_Invoiced_lock_Amount</fullName>
        <active>true</active>
        <description>can&apos;t change fee amounts if non-voided invoiced</description>
        <errorConditionFormula>AND( NOT(ISPICKVAL(BGBK__Invoice__r.BGBK__Status__c,&apos;Voided&apos;)), BGBK__Invoice__c != null,  ISCHANGED(MUSW__Amount__c ))</errorConditionFormula>
        <errorMessage>Cannot change the Amount of an Invoiced Fee. Void invoice before changing the Fee Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>BGBK__Fee_Paid_Full_lock_Amount</fullName>
        <active>true</active>
        <description>can&apos;t change amount below paid amount</description>
        <errorConditionFormula>AND( MUSW__Fee_Paid__c = true,  ISCHANGED(MUSW__Amount__c ), PRIORVALUE(MUSW__Amount__c ) &gt; MUSW__Amount__c)</errorConditionFormula>
        <errorMessage>Cannot change the Amount below the Amount already paid on this Fee. Increase Amount or click Cancel</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Fee_Amount_Paid_Over_Amount</fullName>
        <active>true</active>
        <description>Can overpay an fee amount</description>
        <errorConditionFormula>MUSW__Amount_Paid__c &gt; MUSW__Amount__c - NULLVALUE(MUSW__Amount_Waived__c, 0) - NULLVALUE(MUSW__Amended_Amount__c, 0)</errorConditionFormula>
        <errorMessage>Cannot overpay Fee Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Waived_Amount_greater_than_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>MUSW__Amount__c &lt; MUSW__Amount_Waived__c</errorConditionFormula>
        <errorMessage>Can not waive more than Amount</errorMessage>
    </validationRules>
</CustomObject>